--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shrikhand&display=swap" rel="stylesheet">  
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shrikhand&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -23,116 +24,100 @@
     </header>
     <!--LOCALISATION-->
     <main>
-    <div class="localisation">
-        <i class="fas fa-map-marker-alt" ></i>
-        <p>Paris, Belleville</p>
-    </div>
-    <section class="section-explorer">
-        <h2>Réservez le menu qui vous convient</h2>
-        <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-        <a href="#">Explorez nos restaurants</a>
-    </section>
-    <!--FONCTIONNEMENT-->
-    <section class="section-menu">
-        <h2>Fonctionnement</h2>
-        <div>
-            <div><i class="fas fa-mobile-alt icon"></i>Choisissez un restaurant
-            <div class="section-menu__numero">1</div></div>
-            <div><i class="fas fa-list-ul icon"></i> Composez votre menu <div class="section-menu__numero">2</div></div>
-            <div><i class="fas fa-store icon"></i> Dégustez au restaurant <div class="section-menu__numero">3</div></div>
+        <div class="localisation">
+            <i class="fas fa-map-marker-alt"></i>
+            <p>Paris, Belleville</p>
         </div>
-    </section>
-    <!--RESTAURANTS-->
-    <section class="section-restaurants">
-        <h2 id="section-restaurants__titre">Restaurants</h2>
-        <div>
-            <article class="one">
-            <a href="la-palette-du-gout.html">
-            <img src="public/restaurants/lapalettedugout.jpg" alt="La palette du gout"/>
-            <span>Nouveau</span>
-            <div class="section-restaurants__article"><h2>La palette du goût</h2>
-                 <p>Ménilmontant</p>
-                 <!--<div class="section-restaurants__coeur section-menu__coeur">
-                    <i class="coeur1 far fa-heart"></i>
+        <section class="section-explorer">
+            <h2>Réservez le menu qui vous convient</h2>
+            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+            <a href="#">Explorez nos restaurants</a>
+        </section>
+        <!--FONCTIONNEMENT-->
+        <section class="section-menu">
+            <h2>Fonctionnement</h2>
+            <div>
+                <div><i class="fas fa-mobile-alt icon"></i>Choisissez un restaurant
+                    <div class="section-menu__numero">1</div>
                 </div>
-                <div class="section-restaurant__animation section-menu__animation">
-                    <i class="coeur2 fas fa-heart"></i>
-                </div>!-->
-            </div>
-        </a>
-        <div class="section-restaurants__coeur section-menu__coeur">
-            <i class="coeuraccueil1 far fa-heart"></i>
-        </div>
-        <div class="section-restaurant__animation section-menu__animation">
-            <i class="coeuraccueil2 fas fa-heart"></i>
-        </div>
-            </article> 
-            <article class="two">
-        <a href="la-note-enchantée.html">
-            <img src="public/restaurants/lanoteenchantée.jpg" alt="La note enchantée"/>
-            <span>Nouveau</span>
-            <div class="section-restaurants__article">
-                <h2>La note enchantée</h2>
-                <p>Charonne</p>
-                <!--<div class="section-restaurants__coeur section-menu__coeur">
-                    <i class="coeur1 far fa-heart"></i>
+                <div><i class="fas fa-list-ul icon"></i> Composez votre menu <div class="section-menu__numero">2</div>
                 </div>
-                <div class="section-restaurant__animation section-menu__animation">
-                    <i class="coeur2 fas fa-heart"></i>
-                </div>!-->
+                <div><i class="fas fa-store icon"></i> Dégustez au restaurant <div class="section-menu__numero">3</div>
+                </div>
             </div>
-        </a>
-        <div class="section-restaurants__coeur section-menu__coeur">
-            <i class="coeuraccueil1 far fa-heart"></i>
-        </div>
-        <div class="section-restaurant__animation section-menu__animation">
-            <i class="coeuraccueil2 fas fa-heart"></i>
-        </div>
-        </article>
-        <article class="three">
-        <a href="A-la-francaise.html">
-                <img src="public/restaurants/alafrancaise.jpg" alt="A la française"/>
-                <div class="section-restaurants__article">
-                    <h2>A la française</h2>
-                    <p>Cité Rouge</p>
-                    <!--<div class="section-restaurants__coeur section-menu__coeur">
-                        <i class="coeur1 far fa-heart"></i>
+        </section>
+        <!--RESTAURANTS-->
+        <section class="section-restaurants">
+            <h2 id="section-restaurants__titre">Restaurants</h2>
+            <div>
+                <article class="one">
+                    <a href="la-palette-du-gout.html">
+                        <img src="public/restaurants/lapalettedugout.jpg" alt="La palette du gout" />
+                        <span>Nouveau</span>
+                        <div class="section-restaurants__article">
+                            <h2>La palette du goût</h2>
+                            <p>Ménilmontant</p>
+
+                        </div>
+                    </a>
+                    <div class="section-restaurants__coeur section-menu__coeur">
+                        <i class="coeuraccueil1 far fa-heart"></i>
                     </div>
                     <div class="section-restaurant__animation section-menu__animation">
-                        <i class="coeur2 fas fa-heart"></i>
-                    </div>!-->
-                </div>
-        </a>
-        <div class="section-restaurants__coeur section-menu__coeur">
-            <i class="coeuraccueil1 far fa-heart"></i>
-        </div>
-        <div class="section-restaurant__animation section-menu__animation">
-            <i class="coeuraccueil2 fas fa-heart"></i>
-        </div>
-        </article>
-        <article class="four">
-        <a href="Le-delice-des-sens.html">
-            <img src="public/restaurants/ledelicedessens.jpg" alt="Le délice des sens"/>   
-            <div class="section-restaurants__article">
-                <h2>Le délice des sens</h2>
-                <p>Folie-Méricourt</p>
-                <!--<div class="section-restaurants__coeur section-menu__coeur">
-                    <i class="coeur1 far fa-heart"></i>
-                </div>
-                <div class="section-restaurant__animation section-menu__animation">
-                    <i class="coeur2 fas fa-heart"></i>
-                </div>!-->
+                        <i class="coeuraccueil2 fas fa-heart"></i>
+                    </div>
+                </article>
+                <article class="two">
+                    <a href="la-note-enchantée.html">
+                        <img src="public/restaurants/lanoteenchantée.jpg" alt="La note enchantée" />
+                        <span>Nouveau</span>
+                        <div class="section-restaurants__article">
+                            <h2>La note enchantée</h2>
+                            <p>Charonne</p>
+
+                        </div>
+                    </a>
+                    <div class="section-restaurants__coeur section-menu__coeur">
+                        <i class="coeuraccueil1 far fa-heart"></i>
+                    </div>
+                    <div class="section-restaurant__animation section-menu__animation">
+                        <i class="coeuraccueil2 fas fa-heart"></i>
+                    </div>
+                </article>
+                <article class="three">
+                    <a href="A-la-francaise.html">
+                        <img src="public/restaurants/alafrancaise.jpg" alt="A la française" />
+                        <div class="section-restaurants__article">
+                            <h2>A la française</h2>
+                            <p>Cité Rouge</p>
+
+                        </div>
+                    </a>
+                    <div class="section-restaurants__coeur section-menu__coeur">
+                        <i class="coeuraccueil1 far fa-heart"></i>
+                    </div>
+                    <div class="section-restaurant__animation section-menu__animation">
+                        <i class="coeuraccueil2 fas fa-heart"></i>
+                    </div>
+                </article>
+                <article class="four">
+                    <a href="Le-delice-des-sens.html">
+                        <img src="public/restaurants/ledelicedessens.jpg" alt="Le délice des sens" />
+                        <div class="section-restaurants__article">
+                            <h2>Le délice des sens</h2>
+                            <p>Folie-Méricourt</p>
+
+                        </div>
+                    </a>
+                    <div class="section-restaurants__coeur section-menu__coeur">
+                        <i class="coeuraccueil1 far fa-heart"></i>
+                    </div>
+                    <div class="section-restaurant__animation section-menu__animation">
+                        <i class="coeuraccueil2 fas fa-heart"></i>
+                    </div>
+                </article>
             </div>
-        </a>
-        <div class="section-restaurants__coeur section-menu__coeur">
-            <i class="coeuraccueil1 far fa-heart"></i>
-        </div>
-        <div class="section-restaurant__animation section-menu__animation">
-            <i class="coeuraccueil2 fas fa-heart"></i>
-        </div>
-        </article>
-        </div>
-    </section>
+        </section>
     </main>
     <!--FOOTER-->
     <footer>
@@ -147,4 +132,5 @@
         </div>
     </footer>
 </body>
+
 </html>
