--- a/la-note-enchantée.html
+++ b/la-note-enchantée.html
@@ -10,155 +10,156 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shrikhand&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shrikhand&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    
+
     <!-- HEADER -->
     <header>
         <a href="index.html">
-        <i class="fas fa-arrow-left"></i>
+            <i class="fas fa-arrow-left"></i>
         </a>
         <h1><a href="index.html">ohmyfood</a></h1>
     </header>
     <!--IMAGE-->
     <div class="image">
-        <img src="public/restaurants/lanoteenchantée.jpg" alt="la note enchantée"/>
+        <img src="public/restaurants/lanoteenchantée.jpg" alt="la note enchantée" />
     </div>
     <!--SECTION MENU-->
     <section id="section-menu_">
         <div class="nom-restaurant">
-        <h2>La note enchantée</h2>
-        <div>
-        <div class="section-menu__coeur" >
-        <i class="coeur1 far fa-heart"></i>
-        </div>
-        <div class="section-menu__animation">
-            <i class="coeur2 fas fa-heart"></i>
-        </div>
-        </div>
+            <h2>La note enchantée</h2>
+            <div>
+                <div class="section-menu__coeur">
+                    <i class="coeur1 far fa-heart"></i>
+                </div>
+                <div class="section-menu__animation">
+                    <i class="coeur2 fas fa-heart"></i>
+                </div>
+            </div>
         </div>
         <!--ENTREES-->
         <div class="main">
-        <h3 class="section-menu__type">ENTREES</h3>
-        <div class="section-menu__soulignement"></div>
-        <div class="column1">
-            <article class="section-menu__article article1">
-                <h2>Raviolesde foie gras</h2>
-                <div class="section-menu__article__description">
-                <p>Accompagnés de leur crème à la truffe</p>
-                <span>25€</span>
-                </div>
-                <div class="section-menu__article__animation">
-                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
-                </div>
-            </article>
+            <h3 class="section-menu__type">ENTREES</h3>
+            <div class="section-menu__soulignement"></div>
+            <div class="column1">
+                <article class="section-menu__article article1">
+                    <h2>Raviolesde foie gras</h2>
+                    <div class="section-menu__article__description">
+                        <p>Accompagnés de leur crème à la truffe</p>
+                        <span>25€</span>
+                    </div>
+                    <div class="section-menu__article__animation">
+                        <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </article>
 
-            <article class="section-menu__article article2">
-                <h2>Caviar osciètre</h2>
-                <div class="section-menu__article__description">
-                <p>Sur blini à la farine de blé noir</p>
-                <span>35€</span>
-                </div>
-                <div class="section-menu__article__animation">
-                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
-                </div>
-            </article>
+                <article class="section-menu__article article2">
+                    <h2>Caviar osciètre</h2>
+                    <div class="section-menu__article__description">
+                        <p>Sur blini à la farine de blé noir</p>
+                        <span>35€</span>
+                    </div>
+                    <div class="section-menu__article__animation">
+                        <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </article>
 
-            <article class="section-menu__article article3">
-                <h2>Homard et espuma de chou-fleur</h2>
-                <div class="section-menu__article__description">
-                <p>Mariné aux zests d'orange</p>
-                <span>20€</span>
-                </div>
-                <div class="section-menu__article__animation">
-                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
-                </div>
-            </article>
-            <article class="section-menu__article article3">
-                <h2>Foie gras de canard cuit entier</h2>
-                <div class="section-menu__article__description">
-                <p>Confiture de figue et pain toasté</p>
-                <span>35€</span>
-                </div>
-                <div class="section-menu__article__animation">
-                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
-                </div>
-            </article>
-        </div>
-        <!--PLATS-->
-        <h3 class="section-menu__type">PLATS</h3>
-        <div class="section-menu__soulignement"></div>
-        <div class="column2">
-            <article class="section-menu__article article4">
-                <h2>Noix de coquilles Saint-Jacques</h2>
-                <div class="section-menu__article__description">
-                <p>Sur lit de purée de céleri-rave</p>
-                <span>40€</span>
-                </div>
-                <div class="section-menu__article__animation">
-                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
-                </div>
-            </article>
-            <article class="section-menu__article article5">
-                <h2>Langoustine poêlée</h2>
-                <div class="section-menu__article__description">
-                <p>Purée de patate douce</p>
-                <span>35€</span>
-                </div>
-                <div class="section-menu__article__animation">
-                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
-                </div>
-            </article>
-            <article class="section-menu__article article6">
-                <h2>Mijoté de queue de boeuf</h2>
-                <div class="section-menu__article__description">
-                <p>Et riz sauvage aux zests de citron</p>
-                <span>44€</span>
-                </div>
-                <div class="section-menu__article__animation">
-                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
-                </div>
-            </article>
-        </div>
-        <!--DESSERTS-->
-        <h3 class="section-menu__type">DESSERTS</h3>
-        <div class="section-menu__soulignement"></div>
-        <div class="column3">
-            <article class="section-menu__article article7">
-                <h2>Macaron noisette et chocolat</h2>
-                <div class="section-menu__article__description">
-                <p>Glace au caramel brun et sel de Guérande</p>
-                <span>18€</span>
-                </div>
-                <div class="section-menu__article__animation">
-                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
-                </div>
-            </article>
-            <article class="section-menu__article article8">
-                <h2>Baba au rhum revisité</h2>
-                <div class="section-menu__article__description">
-                <p>Avec son coulis de citron</p>
-                <span>22€</span>
-                </div>
-                <div class="section-menu__article__animation">
-                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
-                </div>
-            </article>
-            <article class="section-menu__article article9">
-                <h2>Tarte au citron meringuée</h2>
-                <div class="section-menu__article__description">
-                <p>Destructurée</p>
-                <span>23€</span>
-                </div>
-                <div class="section-menu__article__animation">
-                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
-                </div>
-            </article>
-        </div>
-        <!--BOUTON COMMANDER-->
-        <div class="bouton-commander"><a href="#">Commander</a></div>
+                <article class="section-menu__article article3">
+                    <h2>Homard et espuma de chou-fleur</h2>
+                    <div class="section-menu__article__description">
+                        <p>Mariné aux zests d'orange</p>
+                        <span>20€</span>
+                    </div>
+                    <div class="section-menu__article__animation">
+                        <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </article>
+                <article class="section-menu__article article3">
+                    <h2>Foie gras de canard cuit entier</h2>
+                    <div class="section-menu__article__description">
+                        <p>Confiture de figue et pain toasté</p>
+                        <span>35€</span>
+                    </div>
+                    <div class="section-menu__article__animation">
+                        <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </article>
+            </div>
+            <!--PLATS-->
+            <h3 class="section-menu__type">PLATS</h3>
+            <div class="section-menu__soulignement"></div>
+            <div class="column2">
+                <article class="section-menu__article article4">
+                    <h2>Noix de coquilles Saint-Jacques</h2>
+                    <div class="section-menu__article__description">
+                        <p>Sur lit de purée de céleri-rave</p>
+                        <span>40€</span>
+                    </div>
+                    <div class="section-menu__article__animation">
+                        <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </article>
+                <article class="section-menu__article article5">
+                    <h2>Langoustine poêlée</h2>
+                    <div class="section-menu__article__description">
+                        <p>Purée de patate douce</p>
+                        <span>35€</span>
+                    </div>
+                    <div class="section-menu__article__animation">
+                        <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </article>
+                <article class="section-menu__article article6">
+                    <h2>Mijoté de queue de boeuf</h2>
+                    <div class="section-menu__article__description">
+                        <p>Et riz sauvage aux zests de citron</p>
+                        <span>44€</span>
+                    </div>
+                    <div class="section-menu__article__animation">
+                        <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </article>
+            </div>
+            <!--DESSERTS-->
+            <h3 class="section-menu__type">DESSERTS</h3>
+            <div class="section-menu__soulignement"></div>
+            <div class="column3">
+                <article class="section-menu__article article7">
+                    <h2>Macaron noisette et chocolat</h2>
+                    <div class="section-menu__article__description">
+                        <p>Glace au caramel brun et sel de Guérande</p>
+                        <span>18€</span>
+                    </div>
+                    <div class="section-menu__article__animation">
+                        <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </article>
+                <article class="section-menu__article article8">
+                    <h2>Baba au rhum revisité</h2>
+                    <div class="section-menu__article__description">
+                        <p>Avec son coulis de citron</p>
+                        <span>22€</span>
+                    </div>
+                    <div class="section-menu__article__animation">
+                        <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </article>
+                <article class="section-menu__article article9">
+                    <h2>Tarte au citron meringuée</h2>
+                    <div class="section-menu__article__description">
+                        <p>Destructurée</p>
+                        <span>23€</span>
+                    </div>
+                    <div class="section-menu__article__animation">
+                        <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </article>
+            </div>
+            <!--BOUTON COMMANDER-->
+            <div class="bouton-commander"><a href="#">Commander</a></div>
         </div>
     </section>
     <!--FOOTER-->
@@ -174,4 +175,5 @@
         </div>
     </footer>
 </body>
+
 </html>
