--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -10,145 +10,146 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shrikhand&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shrikhand&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    
+
     <!-- HEADER -->
     <header>
         <a href="index.html">
-        <i class="fas fa-arrow-left"></i>
+            <i class="fas fa-arrow-left"></i>
         </a>
         <h1><a href="index.html">ohmyfood</a></h1>
     </header>
     <!--IMAGE-->
     <div class="image">
-        <img src="public/restaurants/lapalettedugout.jpg" alt="la palette du gout"/>
+        <img src="public/restaurants/lapalettedugout.jpg" alt="la palette du gout" />
     </div>
     <!--SECTION MENU-->
     <section id="section-menu_">
         <div class="nom-restaurant">
-        <h2>La palette du goût</h2>
-        <div>
-        <div class="section-menu__coeur" >
-        <i class="coeur1 far fa-heart"></i>
-        </div>
-        <div class="section-menu__animation">
-            <i class="coeur2 fas fa-heart"></i>
-        </div>
-        </div>
+            <h2>La palette du goût</h2>
+            <div>
+                <div class="section-menu__coeur">
+                    <i class="coeur1 far fa-heart"></i>
+                </div>
+                <div class="section-menu__animation">
+                    <i class="coeur2 fas fa-heart"></i>
+                </div>
+            </div>
         </div>
         <!--ENTREES-->
         <div class="main">
-        <h3 class="section-menu__type">ENTREES</h3>
-        <div class="section-menu__soulignement"></div>
-        <div class="column1">
-            <article class="section-menu__article article1">
-                <h2>Fricassée d'escargot</h2>
-                <div class="section-menu__article__description">
-                <p>Au pimet d'espelette</p>
-                <span>25€</span>
-                </div>
-                <div class="section-menu__article__animation">
-                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
-                </div>
-            </article>
+            <h3 class="section-menu__type">ENTREES</h3>
+            <div class="section-menu__soulignement"></div>
+            <div class="column1">
+                <article class="section-menu__article article1">
+                    <h2>Fricassée d'escargot</h2>
+                    <div class="section-menu__article__description">
+                        <p>Au pimet d'espelette</p>
+                        <span>25€</span>
+                    </div>
+                    <div class="section-menu__article__animation">
+                        <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </article>
 
-            <article class="section-menu__article article2">
-                <h2>Foie gras de canard mi-cuit</h2>
-                <div class="section-menu__article__description">
-                <p>Et ses copeaux de truffe noire</p>
-                <span>35€</span>
-                </div>
-                <div class="section-menu__article__animation">
-                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
-                </div>
-            </article>
+                <article class="section-menu__article article2">
+                    <h2>Foie gras de canard mi-cuit</h2>
+                    <div class="section-menu__article__description">
+                        <p>Et ses copeaux de truffe noire</p>
+                        <span>35€</span>
+                    </div>
+                    <div class="section-menu__article__animation">
+                        <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </article>
 
-            <article class="section-menu__article article3">
-                <h2>Oeuf au plat</h2>
-                <div class="section-menu__article__description">
-                <p>Assaisonné  la truffe sur lit de salade</p>
-                <span>20€</span>
-                </div>
-                <div class="section-menu__article__animation">
-                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
-                </div>
-            </article>
-        </div>
-        <!--PLATS-->
-        <h3 class="section-menu__type">PLATS</h3>
-        <div class="section-menu__soulignement"></div>
-        <div class="column2">
-            <article class="section-menu__article article4">
-                <h2>Filet de boeuf aux herbes</h2>
-                <div class="section-menu__article__description">
-                <p>Accompagné de sa ribambelle de légumes</p>
-                <span>40€</span>
-                </div>
-                <div class="section-menu__article__animation">
-                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
-                </div>
-            </article>
-            <article class="section-menu__article article5">
-                <h2>Parmentier de queue de boeuf</h2>
-                <div class="section-menu__article__description">
-                <p>A la truffe noire sur sa purée de panais</p>
-                <span>35€</span>
-                </div>
-                <div class="section-menu__article__animation">
-                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
-                </div>
-            </article>
-            <article class="section-menu__article article6">
-                <h2>Filet de Turbot</h2>
-                <div class="section-menu__article__description">
-                <p>Aux agrumes</p>
-                <span>44€</span>
-                </div>
-                <div class="section-menu__article__animation">
-                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
-                </div>
-            </article>
-        </div>
-        <!--DESSERTS-->
-        <h3 class="section-menu__type">DESSERTS</h3>
-        <div class="section-menu__soulignement"></div>
-        <div class="column3">
-            <article class="section-menu__article article7">
-                <h2>Paris-Brest</h2>
-                <div class="section-menu__article__description">
-                <p>Revisité</p>
-                <span>18€</span>
-                </div>
-                <div class="section-menu__article__animation">
-                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
-                </div>
-            </article>
-            <article class="section-menu__article article8">
-                <h2>Macaron au chocolat d'exception</h2>
-                <div class="section-menu__article__description">
-                <p>Et glace à la vanille de Madagascar</p>
-                <span>22€</span>
-                </div>
-                <div class="section-menu__article__animation">
-                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
-                </div>
-            </article>
-            <article class="section-menu__article article9">
-                <h2>Mousse au chocolat</h2>
-                <div class="section-menu__article__description">
-                <p>Au piment d'espelette et à la truffe noire</p>
-                <span>23€</span>
-                </div>
-                <div class="section-menu__article__animation">
-                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
-                </div>
-            </article>
-        </div>
-        <!--BOUTON COMMANDER-->
-        <div class="bouton-commander"><a href="#">Commander</a></div>
+                <article class="section-menu__article article3">
+                    <h2>Oeuf au plat</h2>
+                    <div class="section-menu__article__description">
+                        <p>Assaisonné la truffe sur lit de salade</p>
+                        <span>20€</span>
+                    </div>
+                    <div class="section-menu__article__animation">
+                        <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </article>
+            </div>
+            <!--PLATS-->
+            <h3 class="section-menu__type">PLATS</h3>
+            <div class="section-menu__soulignement"></div>
+            <div class="column2">
+                <article class="section-menu__article article4">
+                    <h2>Filet de boeuf aux herbes</h2>
+                    <div class="section-menu__article__description">
+                        <p>Accompagné de sa ribambelle de légumes</p>
+                        <span>40€</span>
+                    </div>
+                    <div class="section-menu__article__animation">
+                        <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </article>
+                <article class="section-menu__article article5">
+                    <h2>Parmentier de queue de boeuf</h2>
+                    <div class="section-menu__article__description">
+                        <p>A la truffe noire sur sa purée de panais</p>
+                        <span>35€</span>
+                    </div>
+                    <div class="section-menu__article__animation">
+                        <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </article>
+                <article class="section-menu__article article6">
+                    <h2>Filet de Turbot</h2>
+                    <div class="section-menu__article__description">
+                        <p>Aux agrumes</p>
+                        <span>44€</span>
+                    </div>
+                    <div class="section-menu__article__animation">
+                        <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </article>
+            </div>
+            <!--DESSERTS-->
+            <h3 class="section-menu__type">DESSERTS</h3>
+            <div class="section-menu__soulignement"></div>
+            <div class="column3">
+                <article class="section-menu__article article7">
+                    <h2>Paris-Brest</h2>
+                    <div class="section-menu__article__description">
+                        <p>Revisité</p>
+                        <span>18€</span>
+                    </div>
+                    <div class="section-menu__article__animation">
+                        <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </article>
+                <article class="section-menu__article article8">
+                    <h2>Macaron au chocolat d'exception</h2>
+                    <div class="section-menu__article__description">
+                        <p>Et glace à la vanille de Madagascar</p>
+                        <span>22€</span>
+                    </div>
+                    <div class="section-menu__article__animation">
+                        <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </article>
+                <article class="section-menu__article article9">
+                    <h2>Mousse au chocolat</h2>
+                    <div class="section-menu__article__description">
+                        <p>Au piment d'espelette et à la truffe noire</p>
+                        <span>23€</span>
+                    </div>
+                    <div class="section-menu__article__animation">
+                        <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </article>
+            </div>
+            <!--BOUTON COMMANDER-->
+            <div class="bouton-commander"><a href="#">Commander</a></div>
         </div>
     </section>
     <!--FOOTER-->
@@ -164,4 +165,5 @@
         </div>
     </footer>
 </body>
+
 </html>
